2003-05-30  Callum McKenzie  <callum@physics.otago.ac.nz>

	* Makefile.am (scoredir): Changed score directory to fix bug
	#113968.

2003-01-07  Ross Burton  <ross@burtonini.com>

	* Makefile.am: Fix the use of $DESTDIR, closing #102757. Also
	clean the EXTRA_DIST rule. Thanks to gdx@poczta.fm.

2002-11-27  Ross Burton  <ross@burtonini.com>

	* gnotski.c: s/Gnome/GNOME/, for #99683.

2002-11-22  Tim Musson  <trmusson@ihug.co.nz>

	* gnotski.c: (about_cb), (score_cb), (game_score):
	No more multiple About dialogs, and Score dialog is now modal,
	fixing #97320 for gnotski. Also, About no longer pinches iagno's icon!

2002-11-18  Fernando Herrera <fherrera@onirica.com>

	* gnotski.desktop.in: add X-GNOME-BUGZILLA stuff

2002-11-11  Ross Burton  <ross@burtonini.com>

	* gnotski-icon.png: New icon contributed by Timothy Musson.

2002-09-29  Ross Burton  <ross@burtonini.com>

	* gnotski.c: Remove the useless resize grip and add some padding,
	so the resize grip doesn't hide the text in the status bar. Patch
	from Callum McKenzie <callum@physics.otago.ac.nz>, fixing #90546.

2002-09-11  Eric Baudais  <baudais@kkpsi.org>

	* help/C/gnotski-C.omf: It is a valid XML file.  I'd 
	advise boc to install scrollkeeper-preinstall correctly 
	and learn how to use xmllint.

2002-09-11  jacob berkman  <jacob@ximian.com>

	* help/C/gnotski-C.omf: remove <!DOCTYPE> as it breaks
	scrollkeeper-preinstall

2002-09-09  jacob berkman  <jacob@ximian.com>

	* help/C/gnotski-C.omf: fix to be valid XML

2002-09-06  jacob berkman  <jacob@ximian.com>

	* Makefile.am (SUBDIRS): add help

2002-08-23  Andrew Sobala  <andrew@sobala.net>

	* help/C/gnotski-C.omf: Fix the OMF file, to stop confusing
	Scrollkeeper. Fixing #91402.

2002-08-23  Ross Burton  <ross@burtonini.com>

	* gnotski.c: Enable the high scores dialog. Patch from Andrew
	Sobala <andrew@sobala.net>, fixing #84235.

2002-06-03  Ross Burton  <ross@burtonini.com>

	* gnotski.c: Load pixmaps from the application path instead of the